# scion

./: .bazelrc  Makefile  WORKSPACE  devices_by_node.sh  push_kathara.sh  scion.sh
control/beacon/: policy.go  store.go
control/beaconing/: BUILD.bazel  handler.go  originator.go  propagator.go  writer.go
control/cmd/control/: BUILD.bazel  main.go
daemon/cmd/daemon/: main.go
docker/: BUILD.bazel  endhost.bzl  scion_app.bzl  scion_app_kathara.bzl  tester.bzl  tester_packages.yaml  tester_snapshots.yaml
private/ca/renewal/: ca_signer_gen.go
private/procperf/: BUILD.bazel  procperf.go
private/trust/: BUILD.bazel  verifier.go
router/: dataplane.go
tools/: estimate_res_usage.py  kctl  topogen.py
tools/end2end/: main.go
tools/end2end_integration/: main.go
tools/integration/: BUILD.bazel  binary.go  cmd.go  integration.go  kathara.go
tools/topology/: config.py  defines.py  go.py  kathara.py  monitoring.py  net.py  topo.py  util.py
